# CoulombCorrectedLednicky

CATS_projectPD/: CorrelationCoulombLednicky.cpp  CorrelationCoulombLednicky.h  CoulombLednicky.cpp  CoulombLednicky.h  GenerateDecayMatrix.cpp  GenerateDecayMatrix.h  SketchRealisticPot.cpp  SketchRealisticPot.h  SourceFit.cpp  SourceFit.h  main.cpp
CATS_projectPD/CMake/: CMakeCache.txt  CMakeDLM.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Source Radius/: RadppvsmT_050120.root  fitmTnew.C
